# storage/api-docs/api-docs.json
@@ -5,13 +5,337 @@
         "version": "0.1"
     },
     "paths": {
+        "/api/authorizations": {
+            "post": {
+                "summary": "小程序授权登录",
+                "operationId": "App\\Http\\Controllers\\AuthorizationsController::store",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "code": {
+                                        "description": "小程序登录code）",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/coupon/status/{status}": {
+            "get": {
+                "summary": "用户优惠券列表",
+                "operationId": "App\\Http\\Controllers\\CouponController::index",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/coupon/store/{store_id}": {
+            "get": {
+                "summary": "商家详情",
+                "operationId": "App\\Http\\Controllers\\CouponController::store",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/coupon/stores": {
+            "get": {
+                "summary": "商家列表",
+                "operationId": "App\\Http\\Controllers\\CouponController::stores",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/coupon/used/{coupon_id}": {
+            "get": {
+                "summary": "已使用优惠券性情",
+                "operationId": "App\\Http\\Controllers\\CouponController::used",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/like/stores": {
+            "get": {
+                "summary": "收藏商家列表",
+                "operationId": "App\\Http\\Controllers\\LikeController::stores",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/like/store/{id}": {
+            "post": {
+                "summary": "收藏商家",
+                "operationId": "App\\Http\\Controllers\\LikeController::store",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/like/coupon/{id}": {
+            "post": {
+                "summary": "收藏优惠券",
+                "operationId": "App\\Http\\Controllers\\LikeController::coupon",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/like/coupons": {
+            "get": {
+                "summary": "收藏优惠券列表",
+                "operationId": "App\\Http\\Controllers\\LikeController::coupons",
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/stores/getCode": {
+            "post": {
+                "summary": "获取验证码",
+                "operationId": "App\\Http\\Controllers\\Store\\AuthController::getCode",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "store_mobile": {
+                                        "description": "手机号",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{code:0,message:'ok'}"
+                    }
+                }
+            }
+        },
+        "/api/stores/login": {
+            "post": {
+                "summary": "商家登录",
+                "operationId": "App\\Http\\Controllers\\Store\\AuthController::login",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "shop_no": {
+                                        "description": "店铺号（SP+手机号）",
+                                        "type": "string"
+                                    },
+                                    "store_mobile": {
+                                        "description": "手机号",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "登录密码",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{status:1（1.成功，0.失败）,msg:提示语}"
+                    }
+                }
+            }
+        },
+        "/api/stores/register": {
+            "put": {
+                "summary": "商家注册",
+                "operationId": "App\\Http\\Controllers\\Store\\AuthController::register",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "store_mobile": {
+                                        "description": "手机号",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "登录密码",
+                                        "type": "string"
+                                    },
+                                    "password_confirmation": {
+                                        "description": "确认密码",
+                                        "type": "string"
+                                    },
+                                    "invite_code": {
+                                        "description": "邀请码",
+                                        "type": "string"
+                                    },
+                                    "sms_code": {
+                                        "description": "验证码",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{status:1（1.成功，0.失败）,msg:'提示语'}"
+                    }
+                }
+            }
+        },
+        "/api/stores/coupon/publish": {
+            "put": {
+                "summary": "商家生成优惠券",
+                "operationId": "App\\Http\\Controllers\\Store\\CouponController::publish",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "coupon_name": {
+                                        "description": "优惠券名称",
+                                        "type": "string"
+                                    },
+                                    "coupon_explain": {
+                                        "description": "优惠券说明",
+                                        "type": "string"
+                                    },
+                                    "coupon_type": {
+                                        "description": "优惠券类型：1.普通券；2.联盟券；3.次卡券；4.储值券",
+                                        "type": "number"
+                                    },
+                                    "end_time": {
+                                        "description": "结束时间：2020-05-05",
+                                        "type": "date"
+                                    },
+                                    "total_num": {
+                                        "description": "总数",
+                                        "type": "int"
+                                    },
+                                    "user_num": {
+                                        "description": "每个人可使用的次数",
+                                        "type": "int"
+                                    },
+                                    "is_rec": {
+                                        "description": "是否推荐：0.否；1.是",
+                                        "type": "int"
+                                    },
+                                    "use_notice": {
+                                        "description": "使用须知",
+                                        "type": "string"
+                                    },
+                                    "careful_matter": {
+                                        "description": "注意事项",
+                                        "type": "string"
+                                    },
+                                    "recharge_amount": {
+                                        "description": "充值金额",
+                                        "type": "float"
+                                    },
+                                    "give_amount": {
+                                        "description": "赠送金额",
+                                        "type": "float"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{status:1（1.成功，0.失败）,msg:'提示语'}"
+                    }
+                }
+            }
+        },
+        "/api/stores/update": {
+            "put": {
+                "summary": "修改商家资料",
+                "operationId": "App\\Http\\Controllers\\Store\\StoreController::update",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "description": "店铺名称",
+                                        "type": "string"
+                                    },
+                                    "logo": {
+                                        "description": "店铺Logo",
+                                        "type": "string"
+                                    },
+                                    "photo": {
+                                        "description": "店铺门头照",
+                                        "type": "string"
+                                    },
+                                    "intro": {
+                                        "description": "介绍",
+                                        "type": "string"
+                                    },
+                                    "type": {
+                                        "description": "店铺类型",
+                                        "type": "int"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "{code:0}"
+                    }
+                }
+            }
+        },
         "/api/stores": {
             "get": {
                 "summary": "首页商家列表",
                 "operationId": "App\\Http\\Controllers\\StoreController::index",
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             }
@@ -22,7 +346,7 @@
                 "operationId": "App\\Http\\Controllers\\StoreController::search",
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             }
@@ -33,7 +357,7 @@
                 "operationId": "App\\Http\\Controllers\\StoreController::filter",
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             }
@@ -44,7 +368,7 @@
                 "operationId": "App\\Http\\Controllers\\StoreController::show",
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             }
@@ -55,7 +379,7 @@
                 "operationId": "App\\Http\\Controllers\\UserController::show",
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             },
@@ -68,9 +392,11 @@
                             "schema": {
                                 "properties": {
                                     "nickname": {
+                                        "description": "昵称",
                                         "type": "string"
                                     },
                                     "phone": {
+                                        "description": "手机号",
                                         "type": "string"
                                     }
                                 },
@@ -85,7 +411,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "{code:0}"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             }
@@ -96,7 +422,7 @@
                 "operationId": "App\\Http\\Controllers\\UserController::invites",
                 "responses": {
                     "200": {
-                        "description": "success"
+                        "description": "{code:0,message:'ok'}"
                     }
                 }
             }
